--- a/style.css
+++ b/style.css
@@ -1,333 +1,198 @@
-/* PC 화면에 대한 스타일 */
-@media screen and (min-width: 1200px) {
-  body {
-    color: #374151;
-    word-break: keep-all;
-    font-family: "Pretendard", sans-serif;
-  }
-  
-  h1 {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 56px;
-    letter-spacing: 0.02em;
-  }
-  
-  img {
-    vertical-align: bottom;
-  }
-
-  .header {
-    position: fixed;
-    z-index: 9999;
-    width: 100%;
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 200px;
-    background-color: #ffffff;
-    border-bottom: 1px solid #dfdfdf;
-  }
-  
-  .header__logo {
-    width: 153px;
-  }
-  
-  .header__btn {
-    font-size: 16px;
-    font-weight: 600;
-    border-radius: 8px;
-    padding: 14.5px 43px;
-  }
-
-  .wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 100%;
-  }
-  
-  .footer {
-    background-color: #111827;
-    color: #9ca3af;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 32px 200px 108px 200px;
-    font-size: 16px;
-  }
-  
-  .footer__menu {
-    display: flex;
-    gap: 30px;
-    color: #e5e7eb;
-  }
-  
-  .feature__social-media-image {
-    width: 20;
-  }
-  
-  .footer__social-media {
-    display: flex;
-    gap: 12px;
-  }
-  
-  .btn {
-    background-color: #3692ff;
-    color: #ffffff;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .btn:hover {
-    background-color: #1967d6;
-  }
-  
-  .btn:focus {
-    background-color: #1251aa;
-  }
-  
-  .btn:disabled {
-    background-color: #9ca3af;
-    cursor: default;
-    pointer-events: none;
-  }
-  
-  .banner {
-    background-color: #cfe5ff;
-    height: 540px;
-    display: flex;
-    align-items: center;
-    background-repeat: no-repeat;
-    background-position: 80% bottom;
-    background-size: 55%;
-  }
-  
-  #hero {
-    background-image: url("../images/home/판다1.png");
-  }
-  
-  #bottomBanner {
-    background-image: url("../images/home/판다2.png");
-  }
-  
-  .banner .main_banner-btn {
-    margin-top: 32px;
-  }
-  
-  .main_banner-btn {
-    font-size: 20px;
-    font-weight: 700;
-    border-radius: 999px;
-    padding: 16px 126px;
-  }
-  
-  #features {
-    padding-bottom: 138px;
-  }
-  
-  .feature {
-    padding: 138px 0;
-    display: flex;
-    align-items: center;
-    gap: 5%;
-  }
-  
-  .feature__image {
-    width: 50%;
-  }
-  
-  .feature:nth-child(2) {
-    text-align: right;
-  }
-  
-  .feature__frame {
-    flex: 1;
-  }
-  
-  .feature__tag {
-    color: #3692ff;
-    font-size: 18px;
-    line-height: 25px;
-    font-weight: 700;
-    margin-bottom: 12px;
-  }
-  
-  .feature__description {
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 120%;
-    letter-spacing: 0.08em;
-    margin-top: 24px;
-  }
+body {
+  color: #374151;
+  word-break: keep-all;
+  font-family: "Pretendard", sans-serif;
 }
 
-/* Tablet 화면에 대한 스타일 */
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  body {
-    color: #374151;
-    word-break: keep-all;
-    font-family: "Pretendard", sans-serif;
-  }
-  
-  h1 {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 56px;
-    letter-spacing: 0.02em;
-  }
-  
-  img {
-    vertical-align: bottom;
-  }
+h1 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 56px;
+  letter-spacing: 0.02em;
+}
 
+img {
+  vertical-align: bottom;
+}
+
+.header {
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+  border-bottom: 1px solid #dfdfdf;
+}
+
+.header__logo {
+  width: 153px;
+}
+
+.header__btn {
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 14.5px 43px;
+}
+
+.wrapper {
+  max-width: 1200px;
+  width: 100%;
+}
+
+.footer {
+  background-color: #111827;
+  color: #9ca3af;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 32px 200px 108px 200px;
+  font-size: 16px;
+}
+
+.footer__menu {
+  display: flex;
+  gap: 30px;
+  color: #e5e7eb;
+}
+
+.feature__social-media-image {
+  width: 20;
+}
+
+.footer__social-media {
+  display: flex;
+  gap: 12px;
+}
+
+.btn {
+  background-color: #3692ff;
+  color: #ffffff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn:hover {
+  background-color: #1967d6;
+}
+
+.btn:focus {
+  background-color: #1251aa;
+}
+
+.btn:disabled {
+  background-color: #9ca3af;
+  cursor: default;
+  pointer-events: none;
+}
+
+.banner {
+  background-color: #cfe5ff;
+  /* height: 540px; 모바일 태블릿은 771 */
+  display: flex;
+  align-items: center;
+  /* text-align: center; 모바일 태블릿만 적용 */
+  background-repeat: no-repeat;
+  background-position: 80% bottom;
+  background-size: 55%;
+}
+
+.banner .main_banner-btn {
+  margin-top: 32px;
+}
+
+.main_banner-btn {
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 999px;
+  padding: 16px 126px;
+}
+
+#hero {
+  background-image: url("../images/home/판다1.png");
+}
+
+#bottomBanner {
+  background-image: url("../images/home/판다2.png");
+}
+
+#features {
+  padding-bottom: 138px;
+}
+
+.feature {
+  padding: 138px 0;
+  display: flex;
+  align-items: center;
+  gap: 5%;
+}
+
+.feature__image {
+  width: 50%;
+}
+
+.feature:nth-child(2) {
+  text-align: right;
+}
+
+.feature__frame {
+  flex: 1;
+}
+  
+.feature__tag {
+  color: #3692ff;
+  font-weight: 700;
+  margin-bottom: 12px;
+}
+
+.feature__description {
+  font-weight: 500;
+  letter-spacing: 0.08em;
+  margin-top: 24px;
+}
+
+/* Mobile 화면에 대한 스타일 */
+@media screen and (max-width: 767px) {  
   .header {
-    position: fixed;
-    z-index: 9999;
-    width: 100%;
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 24px;
-    background-color: #ffffff;
-    border-bottom: 1px solid #dfdfdf;
-  }
+    padding: 0 200px;
+  } 
 
   .header__logo {
-    width: 153px;
     margin-right: 24px;
   }
-  
+
   .header__btn {
-    font-size: 16px;
-    font-weight: 600;
-    border-radius: 8px;
-    padding: 14.5px 43px;
-    margin-left: 24px; 
+    margin-left: 24px;
   }
 
   .wrapper {
-    max-width: 1200px;
     margin: 400px auto;
-    width: 100%;
   }
-  
-  .footer {
-    background-color: #111827;
-    color: #9ca3af;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 32px 200px 108px 200px;
-    font-size: 16px;
-  }
-  
-  .footer__menu {
-    display: flex;
-    gap: 30px;
-    color: #e5e7eb;
-  }
-  
-  .feature__social-media-image {
-    width: 20;
-  }
-  
-  .footer__social-media {
-    display: flex;
-    gap: 12px;
-  }
-  
-  .btn {
-    background-color: #3692ff;
-    color: #ffffff;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .btn:hover {
-    background-color: #1967d6;
-  }
-  
-  .btn:focus {
-    background-color: #1251aa;
-  }
-  
-  .btn:disabled {
-    background-color: #9ca3af;
-    cursor: default;
-    pointer-events: none;
-  }
-  
+
   .banner {
-    background-color: #cfe5ff;
-    height: 771px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 771px; 
     text-align: center;
-    background-repeat: no-repeat;
-    background-position: 80% bottom;
-    background-size: 55%;
   }
 
-  .banner__title {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 56px;
-    letter-spacing: 0.02em;
-    color: #374151;
-  }
-
-  .banner__title br {
-    display: none;
-  }
-
-  .banner .wrapper {
-    margin-top: 100px;
-  }
-  
   #hero {
-    background-image: url("../images/home/판다1.png");
     background-position: center bottom;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; 
   }
   
   #bottomBanner {
-    background-image: url("../images/home/판다2.png");
     background-position: center bottom;
     background-repeat: no-repeat;
-  }
-  
-  .banner .main_banner-btn {
-    margin-top: 32px;
-  }
-  
-  .main_banner-btn {
-    font-size: 20px;
-    font-weight: 700;
-    border-radius: 999px;
-    padding: 16px 126px;
-  }
-  
-  #features {
-    padding-bottom: 138px;
-  }
-  
-  .feature {
-    padding: 138px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5%;
+    margin-top: -600px;
   }
 
-  .feature__title br {
-    display: none;
+  .feature {
+    flex-direction: column;
   }
-  
+
   .feature__image {
     width: 90%;
     height: 90%;
@@ -335,170 +200,23 @@
     margin-bottom: 20px;
   }
 
-  .feature__image.img-mid {
-    order: -1;
-    width: 90%;
-    height: 90%;
-    margin-top: -270px;
-    margin-bottom: 20px;
-  }
-
-  .feature__image.img-btm {
-    order: -1;
-    width: 90%;
-    height: 90%;
-    margin-top: -270px;
-  }
-  
-  .feature:nth-child(2) {
-    text-align: right;
-  }
-  
   .feature__frame {
-    flex: 1;
     align-self: flex-start;
     margin-left: 5%;
     margin-bottom: 20px;
   }
 
-  .feature__frame.txt-right {
-    position: relative;
-    margin-top: 20px; 
-    text-align: right;
-    margin-left: auto;
-    margin-right: 5%;
-  }
-  
   .feature__tag {
-    color: #3692ff;
-    font-size: 18px;
-    line-height: 25px;
-    font-weight: 700;
-    margin-bottom: 12px;
+    font-size: 16px; 
+    line-height: 22.4px;
   }
-  
+
   .feature__description {
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 120%;
-    letter-spacing: 0.08em;
-    margin-top: 24px;
-  }
-
-  #bottomBanner {
-    margin-top: -600px;
-  }
-}
-
-/* Mobile 화면에 대한 스타일 */
-@media screen and (max-width: 767px) {
-  body {
-    color: #374151;
-    word-break: keep-all;
-    font-family: "Pretendard", sans-serif;
-  }
-  
-  h1 {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 56px;
-    letter-spacing: 0.02em;
-  }
-  
-  img {
-    vertical-align: bottom;
-  }
-
-  .header {
-    position: fixed;
-    z-index: 9999;
-    width: 100%;
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 16px;
-    background-color: #ffffff;
-    border-bottom: 1px solid #dfdfdf;
-  }
-
-  .header__logo {
-    width: 153px;
-    margin-right: 24px;
-  }
-  
-  .header__btn {
     font-size: 16px;
-    font-weight: 600;
-    border-radius: 8px;
-    padding: 14.5px 43px;
-    margin-left: 24px; 
+    line-height: 19.2px;
   }
 
-  .wrapper {
-    max-width: 1200px;
-    margin: 400px auto;
-    width: 100%;
-  }
-  
-  .footer {
-    background-color: #111827;
-    color: #9ca3af;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 32px 200px 108px 200px;
-    font-size: 16px;
-  }
-  
-  .footer__menu {
-    display: flex;
-    gap: 30px;
-    color: #e5e7eb;
-  }
-  
-  .feature__social-media-image {
-    width: 20;
-  }
-  
-  .footer__social-media {
-    display: flex;
-    gap: 12px;
-  }
-  
-  .btn {
-    background-color: #3692ff;
-    color: #ffffff;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .btn:hover {
-    background-color: #1967d6;
-  }
-  
-  .btn:focus {
-    background-color: #1251aa;
-  }
-  
-  .btn:disabled {
-    background-color: #9ca3af;
-    cursor: default;
-    pointer-events: none;
-  }
-  
-  .banner {
-    background-color: #cfe5ff;
-    height: 771px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-repeat: no-repeat;
-    background-position: 80% bottom;
-    background-size: 55%;
-  }
+  /* /// */
 
   .banner__title {
     font-size: 40px;
@@ -510,41 +228,6 @@
 
   .banner .wrapper {
     margin-top: 100px;
-  }
-  
-  #hero {
-    background-image: url("../images/home/판다1.png");
-    background-position: center bottom;
-    background-repeat: no-repeat;
-  }
-  
-  #bottomBanner {
-    background-image: url("../images/home/판다2.png");
-    background-position: center bottom;
-    background-repeat: no-repeat;
-  }
-  
-  .banner .main_banner-btn {
-    margin-top: 32px;
-  }
-  
-  .main_banner-btn {
-    font-size: 20px;
-    font-weight: 700;
-    border-radius: 999px;
-    padding: 16px 126px;
-  }
-  
-  #features {
-    padding-bottom: 138px;
-  }
-  
-  .feature {
-    padding: 138px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5%;
   }
 
   .feature__title,
@@ -558,13 +241,6 @@
   .feature__title br {
     display: none;
   }
-  
-  .feature__image {
-    width: 90%;
-    height: 90%;
-    margin-top: -500px;
-    margin-bottom: 20px;
-  }
 
   .feature__image.img-mid {
     order: -1;
@@ -579,17 +255,6 @@
     width: 90%;
     height: 90%;
     margin-top: -270px;
-  }
-  
-  .feature:nth-child(2) {
-    text-align: right;
-  }
-  
-  .feature__frame {
-    flex: 1;
-    align-self: flex-start;
-    margin-left: 5%;
-    margin-bottom: 20px;
   }
 
   .feature__frame.txt-right {
@@ -615,8 +280,152 @@
     letter-spacing: 0.08em;
     margin-top: 24px;
   }
+}
 
+/* Tablet 화면에 대한 스타일 */
+@media screen and (min-width: 768px) and (max-width: 1199px) {   
+  .header {
+    padding: 0 24px;
+  } 
+
+  .header__logo {
+    margin-right: 24px;
+  }
+
+  .header__btn {
+    margin-left: 24px;
+  }
+
+  .wrapper {
+    margin: 400px auto;
+  }
+
+  .banner {
+    height: 771px; 
+    text-align: center;
+  }
+
+  #hero {
+    background-position: center bottom;
+    background-repeat: no-repeat; 
+  }
+  
   #bottomBanner {
+    background-position: center bottom;
+    background-repeat: no-repeat;
     margin-top: -600px;
+  }
+
+  .feature {
+    flex-direction: column;
+  }
+
+  .feature__image {
+    width: 90%;
+    height: 90%;
+    margin-top: -500px;
+    margin-bottom: 20px;
+  }
+
+  .feature__frame {
+    align-self: flex-start;
+    margin-left: 5%;
+    margin-bottom: 20px;
+  }
+
+  .feature__tag {
+    font-size: 18px; 
+    line-height: 25px;
+  }
+
+  .feature__description {
+    font-size: 24px;
+    line-height: 120%;
+  }
+
+  /* /// */
+
+  .banner__title {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 56px;
+    letter-spacing: 0.02em;
+    color: #374151;
+  }
+
+  .banner__title br {
+    display: none;
+  }
+
+  .banner .wrapper {
+    margin-top: 100px;
+  }
+
+  .feature__title br {
+    display: none;
+  }
+
+  .feature__image.img-mid {
+    order: -1;
+    width: 90%;
+    height: 90%;
+    margin-top: -270px;
+    margin-bottom: 20px;
+  }
+
+  .feature__image.img-btm {
+    order: -1;
+    width: 90%;
+    height: 90%;
+    margin-top: -270px;
+  }
+
+  .feature__frame.txt-right {
+    position: relative;
+    margin-top: 20px; 
+    text-align: right;
+    margin-left: auto;
+    margin-right: 5%;
+  }
+  
+  .feature__tag {
+    color: #3692ff;
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 700;
+    margin-bottom: 12px;
+  }
+  
+  .feature__description {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: 0.08em;
+    margin-top: 24px;
+  }
+}
+
+/* PC 화면에 대한 스타일 */
+@media screen and (min-width: 1200px) { 
+  .header {
+    padding: 0 16px;
+  }  
+
+  .wrapper {
+    margin: 0 auto;
+  }
+
+  .banner {
+    height: 540px;
+  }
+
+  .feature__tag {
+    font-size: 18px; 
+    line-height: 25px;
+  }
+
+  .feature__description {
+    font-size: 24px;
+    line-height: 120%;
   }
 }
